Fix follow button on mobile (IC)

--- a/front/style/layout/_buttons.scss
+++ b/front/style/layout/_buttons.scss
@@ -115,8 +115,7 @@
 
     &--small {
         font-size: $text--size-smallest;
-        height: 30px;
-        padding: 7px 10px;
+        padding: 2px 10px;
     }
 
     &--medium {
